--- a/index.html
+++ b/index.html
@@ -1,43 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GW Agency - a sua agência web</title>
-    <!--Fonte-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Fonte -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
       rel="stylesheet" />
-    <!-- Bootstrap -->
+    <!-- Estilos -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous" />
-    <!-- Script -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.6.3.min.js"
-      integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
-      crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css" />
-    <!-- Font Awesome-->
+    <!-- Scripts (jQuery não pode ser o slim que vem do Boostrap) -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"></script>
+    <!-- Font Awesome -->
     <script
       src="https://kit.fontawesome.com/b52a243878.js"
       crossorigin="anonymous"></script>
-    <!-- Progress Bar-->
+    <!-- Progress Bar -->
     <script src="js/progressbar.min.js"></script>
     <!-- Parallax -->
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
   </head>
   <body>
-    <h1>GW Agency - a sua agência web</h1>
+    <header>
+      <div class="container" id="nav-container">
+        <nav class="navbar navbar-expand-lg fixed-top">
+          <a href="#" class="navbar-brand">
+            <img id="logo" src="img/hdcagency_logo.svg" alt="GBW Agency" /> GBW
+            Agency
+          </a>
+          <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbar-links"
+          aria-controls="navbar-links"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
+          <a href="" class="nav-item nav-link" id="home-menu">Início</a>
+          <a href="" class="nav-item nav-link" id="about-menu">A agência</a>
+          <a href="" class="nav-item nav-link" id="services-menu">Serviços</a>
+          <a href="" class="nav-item nav-link" id="team-menu">Time</a>
+          <a href="" class="nav-item nav-link" id="portifolio-menu">Projetos</a>
+          <a href="" class="nav-item nav-link" id="contact-menu">Contato</a>
+        </div>
+        </nav>
+      </div>
+    </header>
     <script src="js/script.js"></script>
   </body>
 </html>
