--- a/index.html
+++ b/index.html
@@ -66,6 +66,51 @@
         </nav>
       </div>
     </header>
+    <main>
+      <div class="container-flid">
+        <div id="mainSlider" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#mainSlider" data-slide-to="0" class="active"></li>
+            <li data-target="#mainSlider" data-slide-to="1" ></li>
+            <li data-target="#mainSlider" data-slide-to="2" ></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img/banner1.png" alt="Projetos de e-commerce">
+              <div class="carousel-caption d-none d-md-block">
+                <h2>Quer criar um e-commerce?</h2>
+                <p>Conte conosco</p>
+                <a href="#" class="main-btn">Ver portifólio</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/banner2.png" alt="Engenharia de Software">
+              <div class="carousel-caption d-none d-md-block">
+                <h2>Está querendo tirar o projeto do papel?</h2>
+                <p>Nossa equipe está pronta para lhe atender!</p>
+                <a href="#" class="main-btn">Entre em contato</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/banner3.png" alt="Manutenção em software">
+              <div class="carousel-caption d-none d-md-block">
+                <h2>Buscando manutenção no seu software?</h2>
+                <p>A GMW conta com profissionais altamente qualificdos para resolver seu problema</p>
+                <a href="#" class="main-btn">Entre em contato</a>
+              </div>
+            </div>
+          </div>
+         <a href="#mainSlider" class="carousel-control-prev" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previus</span>
+         </a>
+         <a href="#mainSlider" class="carousel-control-next" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+         </a>
+        </div>
+      </div>
+    </main>
     <script src="js/script.js"></script>
   </body>
 </html>
