--- a/index.html
+++ b/index.html
@@ -109,6 +109,30 @@
           <span class="sr-only">Next</span>
          </a>
         </div>
+        <div id="about-area">
+          <div class="container">
+            <div class="row">
+              <div class="col-12">
+                <h3 class="main-title">Sobre a GBW Agency</h3>
+              </div>
+              <div class="col-md-6">
+                <img src="img/agencia.jpg" alt="Agência GBW" class="img-fluid">
+              </div>
+              <div class="col-md-6">
+                <h3 class="about-title">Uma agência que pensa no futuro</h3>
+                <p>Nossos projetos são adaptados ao cliente e seu propósito.</p>
+                <p>Após a especificação do projetos os arquitetos de software definirão as melhores tecnologias para seu projeto.</p>
+                <p>E nossos designers trabalharão na sua interface/layout para impulsionar o negócio.</p>
+                <p>Veja outros diferenciais:</p>
+                <ul id="about-list">
+                  <li><i class="fas fa-check"></i> Layout responsivo para todos os dispositivos</li>
+                  <li><i class="fas fa-check"></i> Integração com diversos sistemas do mercado</li>
+                  <li><i class="fas fa-check"></i> Desenvolvimento com metodologia ágil</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <script src="js/script.js"></script>
