Alteração do site de agencia para portifólio, alteração de header, logo, sobre e inclusão da seção habilidades

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GW Agency - a sua agência web</title>
+    <title>Geisa Bittencourt - Dev Front-End</title>
     <!-- Fonte -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
@@ -43,7 +43,7 @@
       <div class="container" id="nav-container">
         <nav class="navbar navbar-expand-lg fixed-top">
           <a href="#" class="navbar-brand">
-            <img id="logo" src="img/hdcagency_logo.svg" alt="GBW Agency" /> GBW
+            <img id="logo" src="img/HTML-CSS-JS-Logo-291x300.png" alt="GBW Agency" /> GBW
             Agency
           </a>
           <button
@@ -57,8 +57,8 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
           <a href="" class="nav-item nav-link" id="home-menu">Início</a>
-          <a href="" class="nav-item nav-link" id="about-menu">A agência</a>
-          <a href="" class="nav-item nav-link" id="services-menu">Serviços</a>
+          <a href="" class="nav-item nav-link" id="about-menu">Sobre</a>
+          <a href="" class="nav-item nav-link" id="services-menu">Habilidades</a>
           <a href="" class="nav-item nav-link" id="team-menu">Time</a>
           <a href="" class="nav-item nav-link" id="portifolio-menu">Projetos</a>
           <a href="" class="nav-item nav-link" id="contact-menu">Contato</a>
@@ -78,8 +78,8 @@
             <div class="carousel-item active">
               <img class="d-block w-100" src="img/banner1.png" alt="Projetos de e-commerce">
               <div class="carousel-caption d-none d-md-block">
-                <h2>Quer criar um e-commerce?</h2>
-                <p>Conte conosco</p>
+                <h2>HTML CSS JAVASCRIPT</h2>
+                <p>O conhecimento solido da tríade básica me proporciona o aprendizado rápido de qualquer tecnologia.</p>
                 <a href="#" class="main-btn">Ver portifólio</a>
               </div>
             </div>
@@ -87,15 +87,15 @@
               <img class="d-block w-100" src="img/banner2.png" alt="Engenharia de Software">
               <div class="carousel-caption d-none d-md-block">
                 <h2>Está querendo tirar o projeto do papel?</h2>
-                <p>Nossa equipe está pronta para lhe atender!</p>
+                <p>Estou pronta para lhe atender!</p>
                 <a href="#" class="main-btn">Entre em contato</a>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="img/banner3.png" alt="Manutenção em software">
               <div class="carousel-caption d-none d-md-block">
-                <h2>Buscando manutenção no seu software?</h2>
-                <p>A GMW conta com profissionais altamente qualificdos para resolver seu problema</p>
+                <h2>Buscando a criação de um site?</h2>
+                <p>Posso resolver seu problema.</p>
                 <a href="#" class="main-btn">Entre em contato</a>
               </div>
             </div>
@@ -109,30 +109,73 @@
           <span class="sr-only">Next</span>
          </a>
         </div>
+        <!-- Sobre a desenvolvedora -->
         <div id="about-area">
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <h3 class="main-title">Sobre a GBW Agency</h3>
+                <h3 class="main-title">Sobre a Desenvolvedora</h3>
               </div>
               <div class="col-md-6">
                 <img src="img/agencia.jpg" alt="Agência GBW" class="img-fluid">
               </div>
               <div class="col-md-6">
-                <h3 class="about-title">Uma agência que pensa no futuro</h3>
-                <p>Nossos projetos são adaptados ao cliente e seu propósito.</p>
-                <p>Após a especificação do projetos os arquitetos de software definirão as melhores tecnologias para seu projeto.</p>
-                <p>E nossos designers trabalharão na sua interface/layout para impulsionar o negócio.</p>
+                <h3 class="about-title">Geisa Bittencourt</h3>
+                <p>Apaixonada por desenvolvimento atualmente meu foco de estudos é o front-end</p>
+                <p>Minha esperirencia: Atualmente estou liderando um time na criação de 2 sites para o projeto de mulheres da minha cidade, uma Landing Page para o retiro espiritual anual e um site para a ONG</p>
+                <p>Na igreja a qual faço parte antes mesmo do início dos meus estudos na área de tecnologia precisei adaptar um sistema desenvolvido em bootstrap para controlar uma mesa de som digital antiga, precisei de umas 2 semanas entre estudos e a adaptação do sistema.</p>
                 <p>Veja outros diferenciais:</p>
                 <ul id="about-list">
-                  <li><i class="fas fa-check"></i> Layout responsivo para todos os dispositivos</li>
-                  <li><i class="fas fa-check"></i> Integração com diversos sistemas do mercado</li>
-                  <li><i class="fas fa-check"></i> Desenvolvimento com metodologia ágil</li>
+                  <li><i class="fas fa-check"></i>Auto ditada</li>
+                  <li><i class="fas fa-check"></i>Alta capacidade de adaptação as mudanças</li>
+                  <li><i class="fas fa-check"></i>Trabalho em equipe</li>
+                  <li><i class="fas fa-check"></i>Ferramenta Jira</li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
+        <!-- Serviços da empresa -->
+        <div id="services-area">
+          <div class="container">
+            <div class="row">
+              <div class="col-12">
+                <h3 class="main-title">Habilidades</h3>
+              </div>
+              <div class="col-md-4 service-box">
+                <i class="fa-brands fa-html5"></i>
+                <h4>HTML</h4>
+                <p>É uma linguagem de marcação utilizada na construção de paginas na Web</p>
+              </div>
+              <div class="col-md-4 service-box">
+                <i class="fa-brands fa-css3-alt"></i>
+                <h4>CSS</h4>
+                <p>É um mecanismo pada adiciona estilos a um documento web.</p>
+              </div>
+              <div class="col-md-4 service-box">
+                <i class="fa-brands fa-angular"></i>
+                <h4>Angular</h4>
+                <p>É uma plataforma e framework para construção da interface de aplicações usando HTML, CSS e TypeScript, criada pelos desenvolvedores da Google.</p>
+              </div>
+              <div class="col-md-4 service-box">
+                <i class="fa-brands fa-bootstrap"></i>
+                <h4>Bootstrap</h4>
+                <p>O framework front-end e de código-aberto foi criado para o desenvolvimento web mais rápido e prático.</p>
+              </div>
+              <div class="col-md-4 service-box">
+                <i class="fa-brands fa-git-alt"></i>
+                <h4>Git</h4>
+                <p>É o sistema de controle de versão open source mais usado no mundo atualmente! Ele é usado para controlar o histórico de alterações de arquivos e principalmente de projetos.</p>
+              </div>
+              <div class="col-md-4 service-box">
+                <i class="fa-brands fa-github"></i>
+                <h4>GitHub</h4>
+                <p>É uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--proximo-->
       </div>
     </main>
     <script src="js/script.js"></script>
