adição de seção hobbies com bootstrap card, adição de seção desafios com textos Lorem usando grid col-md-6 com parallax em um dos lados

--- a/index.html
+++ b/index.html
@@ -175,6 +175,90 @@
             </div>
           </div>
         </div>
+        <!-- Dados -->
+        <div id="data-area">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-3 circle-box">
+                <div id="circleA"></i></div>
+                <p>HTML</p>
+              </div>
+              <div class="col-md-3 circle-box">
+                <div id="circleB"></div>
+                <p>CSS</p>
+              </div>
+              <div class="col-md-3 circle-box">
+                <div id="circleC"></div>
+                <p>JAVASCRIPT</p>
+              </div>
+              <div class="col-md-3 circle-box">
+                <div id="circleD"></div>
+                <p>ANGULAR</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Hobbies -->
+        <div id="hobbies">
+          <div class="container">
+            <div class="row">
+              <div class="col-12">
+                <h3 class="main-title">Hobbies</h3>
+              </div>
+              <div class="col-md-3">
+                <div class="card">
+                  <img src="img/hobbie-games.jpg" alt="Hobbie desenvolvimento de Games class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Dev Games</h5>
+                    <p class="card-text">Uma desenvolvedora que tem como hobbie desenvolver rs,sou apaixonada não só por jogar gosto também de desenvolve-los.</p>
+                  </div>
+                </div>
+              </div> 
+              <div class="col-md-3">
+                <div class="card">
+                  <img src="img/hobbie-pedalar.jpg" alt="Hobbie Ciclismo" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Ciclismo</h5>
+                    <p class="card-text">Sonho em um dia atravessar estados com minha bike, o máximo que já pedalei em um dia foram 83km já é um começo.</p>
+                  </div>
+                </div>
+              </div> 
+              <div class="col-md-3">
+                <div class="card">
+                  <img src="img/hobbie-cozinhar.jpg" alt="Hobbie Cozinhar" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Cozinhar</h5>
+                    <p class="card-text">Faço bem salgadinhos, e meus bolos são gostosos, mas preciso deixá-los mais bonitos afinal primeiro comemos com os olhos.</p>
+                  </div>
+                </div>
+              </div> 
+              <div class="col-md-3">
+                <div class="card">
+                  <img src="img/hobbie-costurar.JPG" alt="Hobbie Costurar" class="card-img-top">
+                  <div class="card-body">
+                    <h5 class="card-title">Costurar</h5>
+                    <p class="card-text">Eu mesma tive o prazer de costurar meu vestido de casamento, amei cada segundo desse dia especial.</p>
+                  </div>
+                </div>
+              </div>          
+            </div>
+          </div>
+        </div>
+        <!--Trabalhe conosco-->
+        <div id="apply-area">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-6 apply-box" id="company-img"></div>
+              <div class="col-md-6 apply-box" id="pattern-img">
+                <h4>Gosto de desafios!</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia harum dolorem laudantium facere, soluta incidunt autem, reprehenderit dicta reiciendis odit nobis molestiae ut consequatur sint porro? Vitae, animi? Veritatis, sunt!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas odit optio in voluptate quia alias, nam ipsum cumque aliquam, quisquam praesentium tenetur earum atque amet saepe at harum voluptatem itaque?</p>
+                <p>Clique no botão abaixo e entre em contato.</p>
+                <a href="#" class="main-btn" id="apply-btn">Saiba mais</a>
+              </div>
+            </div>
+          </div>
+        </div>
         <!--proximo-->
       </div>
     </main>
