adição da seção portifólio e filtro de projetos por categoria via classes com javascript/jquery, seção preenchida com imagens lorem adicionar os projetos reais depois

--- a/index.html
+++ b/index.html
@@ -259,6 +259,40 @@
             </div>
           </div>
         </div>
+        <!-- Portifólio -->
+        <div id="portifolio-area">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <h3 class="main-title">Portifólio</h3>
+              </div>
+              <div class="col-md-12" id="filter-btn-box">
+                <button class="main-btn filter-btn active" id="todos-btn">Todos</button>
+                <button class="main-btn filter-btn" id="desenvolvimento-btn">Desenvolvimento</button>
+                <button class="main-btn filter-btn" id="framework-btn">Framework</button>
+                <button class="main-btn filter-btn" id="manutencao-btn">Manutenção</button>
+              </div>
+              <div class="col-md-4 project-box desenvolvimento">
+                <img src="img/proj1.jpg" alt="projeto 1" class="img-fluid">
+              </div>
+              <div class="col-md-4 project-box framework">
+                <img src="img/proj2.jpg" alt="projeto 2" class="img-fluid">
+              </div>
+              <div class="col-md-4 project-box manutencao">
+                <img src="img/proj3.jpg" alt="projeto 3" class="img-fluid">
+              </div>
+              <div class="col-md-4 project-box desenvolvimento">
+                <img src="img/proj4.jpg" alt="projeto 4" class="img-fluid">
+              </div>
+              <div class="col-md-4 project-box framework">
+                <img src="img/proj5.jpg" alt="projeto 5" class="img-fluid">
+              </div>
+              <div class="col-md-4 project-box manutencao">
+                <img src="img/proj6.jpg" alt="projeto 6" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </div>
         <!--proximo-->
       </div>
     </main>
