adição da seção novidades e cta

--- a/index.html
+++ b/index.html
@@ -293,6 +293,28 @@
             </div>
           </div>
         </div>
+        <!-- Novidades -->
+        <div id="news-area">
+          <div class="container">
+            <div class="col-md-12">
+              <h3 class="main-title">Fique por dentro das novidades</h3>
+            </div>
+            <p>Assine a lista de emails, e receba conteúdos sobre desenvolvimento</p>
+            <form action="">
+              <input type="email" class="form-control" id="email-input" name="email" placeholder="Seu melhor email">
+              <input type="submit" id="news-btn" value="Inscrever">
+            </form>
+          </div>
+        </div>
+        <!-- Call to Action-->
+        <div id="call-area">
+          <div class="container">
+            <div class="row">
+              <p>Deseja fazer um orçamento sem compromisso?</p>
+              <button class="main-btn" id="call-btn">Orçar</button>
+            </div>
+          </div>
+        </div>
         <!--proximo-->
       </div>
     </main>
