adição da seção rodapé com informações e formulário de contato finaização da versão desktop do site

--- a/index.html
+++ b/index.html
@@ -315,9 +315,54 @@
             </div>
           </div>
         </div>
-        <!--proximo-->
+        <!--fim?-->
       </div>
     </main>
+    <!-- rodapé -->
+    <footer>
+      <div id="contact-area">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="main-title">Entre em Contato conosco</h3>
+            </div>
+            <div class="col-md-4 contact-box">
+              <i class="fas fa-phone"></i>
+              <p><span class="contact-tile">Ligue para:</span> (21)98270-8329</p>
+              <p><span class="contact-tile">Horários:</span> 9:00 - 18:00</p>
+            </div>
+            <div class="col-md-4 contact-box">
+              <i class="fas fa-envelope"></i>
+              <p><span class="contact-tile">Envie um email:</span>ageisislane@gmail.com</p>
+            </div>
+            <div class="col-md-4 contact-box">
+              <i class="fas fa-map-marker-alt"></i>
+              <p><span class="contact-tile">Venha tomar um café:</span>Nova Iguaçú - RJ</p>
+            </div>
+            <div class="col-md-6" id="msg-box">
+              <p>Ou nos deixe uma mensagem:</p>
+            </div>
+            <div class="col-md-6" id="contact-form">
+              <form action="">
+                <input type="text" class="form-control" placeholder="E-mail" name="email">
+                <input type="text" class="form-control" placeholder="Assunto" name="subject">
+                <textarea class="form-control" rows="3" placeholder="Sua mensagem..." name="message"></textarea>
+                <input type="submit" class="main-btn">
+              </form>
+          </div>
+        </div>
+      </div>
+      <!-- copy-->
+      <div id="copy-area">
+        <div class="container">
+          <div class="row">
+              <div class="col-md-12">
+                <p>Desenvolvido por <a href="https://linkedin.com/in/geisabittencourt" target="_blank">Geisa Bittencourt</a> &copy; 2022</p>
+              </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
